<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="#ffffff"
    android:id="@+id/layout3"
    android:visibility="gone"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="উৎসর্গ – "
        android:textSize="50sp"
        android:layout_marginLeft="20dp"
        />
    <LinearLayout
        android:id="@+id/rupa"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Afroza Sheikh Rupa"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:textColor="#000000"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rupa"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utsorgo"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:textColor="#000000"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#81EDEDF1"
        >

        <Button
            android:id="@+id/prv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnprev"
            android:padding="20dp"
            >

        </Button>

        <Button
            android:id="@+id/home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnhome"
            android:padding="20dp"
            >

        </Button>


        <Button
            android:id="@+id/next2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnnext"
            android:padding="20dp"
            >

        </Button>

    </LinearLayout>

</LinearLayout>

