<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:weightSum="2"
    android:background="#ffffff"
    android:id="@+id/layout2"
    android:visibility="gone"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:background="@drawable/broder_button"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/cover_photo"
            android:scaleX="1.30"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookName"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="লেখকের কথা -"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lekhoker_Kotha"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:src="@drawable/name"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#81EDEDF1"
        >

        <Button
            android:id="@+id/prv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnprev"
            android:padding="20dp"
            >

        </Button>

        <Button
            android:id="@+id/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnhome"
            android:padding="20dp"
            >

        </Button>


        <Button
            android:id="@+id/next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnnext"
            android:padding="20dp"
            >

        </Button>

    </LinearLayout>

</LinearLayout>