<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:weightSum="2"
    android:id="@+id/layout4"
    android:background="#ffffff"
    android:visibility="gone"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:background="@drawable/broder_button"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/cover_photo"
            android:scaleX="1.30"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookName"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            />



    </ScrollView>
    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text=""
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#81EDEDF1"
        >

        <Button
            android:id="@+id/prv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnprev"
            android:padding="20dp"
            >

        </Button>

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnhome"
            android:padding="20dp"
            >

        </Button>


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnnext"
            android:padding="20dp"
            >

        </Button>

    </LinearLayout>


    </LinearLayout>
